# 2mal3s-Recipes

./: .gitignore  CHANGELOG.md  README.md  beet.yaml  pack.mcmeta  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yml
data/2re/advancements/: 2re.json
data/2re/advancements/recipes/: acacia_log.json  acacia_logs.json  acacia_slab.json  acacia_stairs.json  (+155 more)
data/2re/recipes/: activator_rail.json  anvil.json  bed.json  cobbelstone.json  detector_rail.json  gravel.json  obsidian_from_crying.json  sand.json  soul_sand_from_soul_soil.json  sticky_piston_with_honey.json  tinted_glass_from_soul_sand.json
data/global/advancements/: 2mal3.json
data/minecraft/recipes/: acacia_button.json  acacia_pressure_plate.json  acacia_stairs.json  acacia_trapdoor.json  activator_rail.json  andesite_stairs.json  arrow.json  birch_button.json  birch_pressure_plate.json  birch_stairs.json  birch_trapdoor.json  black_stained_glass_pane.json  black_wool.json  blackstone_stairs.json  blue_ice.json  blue_stained_glass_pane.json  blue_wool.json  bone_block.json  bread.json  brick_stairs.json  brown_stained_glass_pane.json  brown_wool.json  chain.json  chest.json  chest_minecart.json  cobbled_deepslate_stairs.json  cobblestone_stairs.json  comparator.json  compass.json  crimson_button.json  crimson_pressure_plate.json  crimson_stairs.json  crimson_trapdoor.json  crossbow.json  cut_copper_stairs.json  cyan_stained_glass_pane.json  cyan_wool.json  dark_oak_button.json  dark_oak_pressure_plate.json  dark_oak_stairs.json  (+134 more)
plugins/: generate_recipe_advancements.py
src/: retoad.py
(+972 files in other folders)
